Added cluster module. Modified msacluster to use the more generalized algorithm in cluster. Added test, example drivers to msacluster. Updated organization of msa. Updated documentation organization and intro. xref J2/89
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@223 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -15,6 +15,7 @@ LIBGSL   = @LIBGSL@
 HEADERS = \
 	easel.h\
 	esl_alphabet.h\
+	esl_cluster.h\
 	esl_dirichlet.h\
 	esl_distance.h\
 	esl_dmatrix.h\
@@ -56,6 +57,7 @@ HEADERS = \
 OBJS    = \
 	easel.o\
 	esl_alphabet.o\
+	esl_cluster.o\
 	esl_dirichlet.o\
 	esl_distance.o\
 	esl_dmatrix.o\
