autoconf changes, so that --disable-sse now works on powerpc. (However, PowerPC still needs an optimized impl, for hmmsearch and hmmsim to compile)
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@224 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -116,6 +116,9 @@ dcheck:
 	(cd testsuite; make dcheck)
 
 clean:
+	(cd documentation; make clean)
+	(cd testsuite;     make clean)
+	(cd miniapps;      make clean)
 	-rm -f ${OBJS} libeasel.a
 	-rm -f *~ TAGS
 	-rm -f *.gcno *.gcda *.gcov
