Updated configure.ac, syncing to new HMMER configure.ac; better handling of SSE and VMX enabling; avoiding Intel-specific autoconf macros on PowerPC platform; streamlined configure option parsing.
Bug fixes in esl_log_sse: NaN is negative in icc, need to catch this
case; other modifications in handling IEEE754 specials.

esl_sse now provides dummy test driver in case where SSE isn't
available.

Makefile now includes SIMD_CFLAGS output variable.

aclocal.m4 sync'ed with HMMER. Soon, Easel's copy will be the only
aclocal.m4, and HMMER will link to it.

Revisions in Makefile.in, improving clean, distclean targets.

Bugfix in esl_stack's test driver, fixing an apparently very specific
"type-punned pointer" causing crash on powerpc/linux/gcc -O3.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@226 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -8,7 +8,7 @@ AR       = @AR@ rcv
 LN       = ln
 RANLIB   = @RANLIB@
 LDFLAGS  = @LDFLAGS@
-SIMDFLAGS= @SIMD_FLAGS@
+SIMDFLAGS= @SIMD_CFLAGS@
 CPPFLAGS = @CPPFLAGS@
 LIBGSL   = @LIBGSL@
 
@@ -116,15 +116,15 @@ dcheck:
 	(cd testsuite; make dcheck)
 
 clean:
-	(cd documentation; make clean)
-	(cd testsuite;     make clean)
-	(cd miniapps;      make clean)
 	-rm -f ${OBJS} libeasel.a
 	-rm -f *~ TAGS
 	-rm -f *.gcno *.gcda *.gcov
 	-rm -f core.[0-9]*
 	-rm -f config.log config.status
 	-rm -f example test testdrive stats
+	(cd documentation; make clean)
+	(cd testsuite;     make clean)
+	(cd miniapps;      make clean)
 
 # The "implode" target is used when we've got Easel as a subdirectory
 # of a larger project, like Infernal or HMMER, and we're building a
@@ -135,12 +135,12 @@ implode:
 	-echo Nothing needs to implode in Easel yet.
 
 distclean:
+	make clean
+	-rm esl_config.h
+	-rm -rf autom4te.cache
 	(cd documentation; make distclean)
 	(cd testsuite;     make distclean)
 	(cd miniapps;      make distclean)
-	-rm esl_config.h
-	make clean
-	-rm -rf autom4te.cache
 	-rm Makefile
 
 TAGS:
