Added Diana's vmx module. Still need to incorporate it, including bugfixes for log() that I've just put in sse.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@227 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/testsuite/Makefile
+++ b/testsuite/Makefile
@@ -6,13 +6,13 @@
 # SRE, Mon Jun 11 08:19:32 2007 [Janelia]
 # SVN $Id$
 
-CC       = icc
-CFLAGS   = -O3 -ansi_alias -xW
+CC       = gcc -std=gnu99
+CFLAGS   = -O3 -fomit-frame-pointer -fstrict-aliasing -mpentiumpro
 CPPFLAGS = 
 LDFLAGS  = 
-SIMDFLAGS= 
+SIMDFLAGS= -msse2
 DEFS     = -DHAVE_CONFIG_H
-LIBS     = -lgsl -lgslcblas  -lm
+LIBS     =   -lm
 MPILIBS  = 
 
 AR      = /usr/bin/ar rcv
