--- a/Makefile.in
+++ b/Makefile.in
@@ -214,17 +214,19 @@ dist:
 	mv ../${BASENAME}-${RELEASE}/documentation/current.pdf  ../${BASENAME}-${RELEASE}/Userguide.pdf
 	# Attach license stamps by replacing LICENSE keyword everywhere
 	find ../${BASENAME}-${RELEASE} -type f -exec devkit/sedition-pp LICENSE LICENSE.tag {} \;
+	# Other keyword replacements
+	devkit/sedition RELEASE ${RELEASE} RELEASEDATE ${RELEASEDATE} COPYRIGHT ${COPYRIGHT} ../${BASENAME}-${RELEASE}/00README
+	devkit/sedition RELEASE ${RELEASE}                                                   ../${BASENAME}-${RELEASE}/INSTALL
+	# Cleanup
+	(cd ../${BASENAME}-${RELEASE}/; make implode)
+	(cd ../${BASENAME}-${RELEASE}/; make distclean)
 	# Packaging
 	(cd ..;	tar cvf ${BASENAME}-${RELEASE}.tar ${BASENAME}-${RELEASE})
 	(cd ..; ${COMPRESS} ${BASENAME}-${RELEASE}.tar)
 
-
-
 # `make dcheck`: run developer testsuite, save output in testsuite/dcheck.report
 dcheck:
 	(cd testsuite; make dcheck)
-
-
 
 # The "implode" target is used when we've got Easel as a subdirectory
 # of a larger project, like Infernal or HMMER, and we're building a
@@ -232,8 +234,8 @@ dcheck:
 # information" from Easel. Eventually that'd include our bug tracking,
 # for instance, but right now there's nothing to do.
 implode:
-	-echo Nothing needs to implode in Easel yet.
-
+	-rm -f 00CHECKLIST
+	-rm -f LICENSE.tag
 
 TAGS:
 	etags *.c *.h *.tex documentation/*.tex miniapps/*.c miniapps/*.man Makefile.in
