--- a/configure.ac
+++ b/configure.ac
@@ -331,7 +331,7 @@ AC_CONFIG_HEADERS([esl_config.h])
 AC_CONFIG_FILES([miniapps/Makefile])
 AC_CONFIG_FILES([testsuite/Makefile])
 AC_CONFIG_FILES([Makefile])
-
+AC_CONFIG_FILES([LICENSE.csh])
 
 
 # 13. voila!
