Still working on distribution-making
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@234 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -179,6 +179,7 @@ distclean:
 	(cd documentation; make distclean)
 	(cd testsuite;     make distclean)
 	(cd miniapps;      make distclean)
+	-rm LICENSE.csh
 	-rm Makefile
 
 #######
