--- a/configure.ac
+++ b/configure.ac
@@ -331,7 +331,9 @@ AC_CONFIG_HEADERS([esl_config.h])
 AC_CONFIG_FILES([miniapps/Makefile])
 AC_CONFIG_FILES([testsuite/Makefile])
 AC_CONFIG_FILES([Makefile])
-AC_CONFIG_FILES([LICENSE.csh])
+if test -e "LICENSE.csh.in"; then
+  AC_CONFIG_FILES(LICENSE.csh)
+fi
 
 
 # 13. voila!
