esl-sfetch is now partially functional; with modifications to SSI; added config.guess, config.sub, install-sh to support configure.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@245 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -34,6 +34,7 @@ PROGS = esl-afetch\
 	esl-histplot\
 	esl-reformat\
 	esl-seqstat\
+	esl-sfetch\
 	esl-shuffle
 
 ## Targets defining how to make miniapp executables.
