--- a/Makefile.in
+++ b/Makefile.in
@@ -256,6 +256,7 @@ supertags:
 	etags -a ~/src/hmmer/src/*.c ~/src/hmmer/src/*.h 
 	etags -a ~/src/hmmer/Makefile.in ~/src/hmmer/src/Makefile.in 
 	etags -a ~/src/infernal/src/*.c ~/src/infernal/src/*.h 
+	etags -a ~/src/infernal/testsuite/*.c 
 	etags -a ~/src/infernal/Makefile.in ~/src/infernal/src/Makefile.in 
 
 # magic SVN for setting keyword ID replacement on a new module foo:
