Significant changes to sqio [xref J3/34,35,37,38,39,40,42,43]
Provides for reading subsequences, windows, and info-only, in addition
to complete sequences. [See flow chart, J3/37]

Sequential access functions:
Read
ReadInfo
ReadWindow

Random access functions:
Fetch
FetchInfo
FetchSubseq

ReadWindow() is capable of reading reverse strand after it's read the
forward strand, for nucleic acid seqs. (esl_sq_ReverseComplement() is
new.)

<ESL_SQ> has fields for tracking 1..L coord systems: start, end, C, W,
L. sq->n is now the actual length of the sequence stored in the
<ESL_SQ>, whereas sq->L is the total length of the original source
sequence.

Coordinates and lengths are now int64_t, not int; will support >2 Gb
seqs. Printing int64_t uses "%" PRId64 "...", not "%d" for printf()
format style. Functions that retrieve an (int *) result now need to
retrieve an (int64_t *) result.

SSI format is changed (magic number in ssi files is now "ssi3"). SSI
now stores lengths and key numbers as 64 bit int64_t. Some 64-bit
(off_t) stuff simplified in the code. 

esl-seqstat now uses esl_sqio_ReadWindow(), so it can stat large
sequences without reading them into memory all at once.

esl-sfetch can now do subsequence fetches, either singly (-c) or from
a list in a file (-Cf). -n renames a sequence. 

sqio's internal structure is generalized [see figure, J3/40] around
seebuf() (provides validation and residue counting); loadbuf() (loads
next buffer or line from memory); loadmem() (loads from disk into
memory cache); addbuf() (parses residues from buffer into ESL_SQ);
skipbuf() (skips number of residues in buffer). These functions now
work for all six input modes, and all three formats (fasta, genbank,
embl). Digital sqio input now validates against sqfp's inmap; invalid
characters are now detected as errors (previously, sqio wasn't
checking against digital alphabet properly).

sqio can now autodetect file format and alphabet from stdin or
gzipp'ed files, because it has a small data ca

--- a/configure.ac
+++ b/configure.ac
@@ -296,18 +296,17 @@ fi
 #    - Make sure we have off_t.
 #
 AC_C_BIGENDIAN
+AC_TYPE_INT8_T
+AC_TYPE_INT16_T
+AC_TYPE_INT32_T
+AC_TYPE_INT64_T
 AC_TYPE_UINT8_T
 AC_TYPE_UINT16_T
 AC_TYPE_UINT32_T
 AC_TYPE_UINT64_T
 AC_TYPE_OFF_T
 
-
 # 8. Checks for structures - none
-
-
-
-
 
 ################################################################
 # 10. Checks for library functions: define HAVE_FOO
