--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -41,6 +41,10 @@
 /* Types
  */
 #undef WORDS_BIGENDIAN
+#undef int8_t
+#undef int16_t
+#undef int32_t
+#undef int64_t
 #undef uint8_t
 #undef uint16_t
 #undef uint32_t
