Added esl-weight miniapp. Added several man pages for miniapps; now each miniapp has one. esl-sfetch now disallows SSI indexing of a .gz file, which doesn't work anyway.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@267 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -35,7 +35,8 @@ PROGS = esl-afetch\
 	esl-selectn\
 	esl-seqstat\
 	esl-sfetch\
-	esl-shuffle
+	esl-shuffle\
+	esl-weight
 
 ## Targets defining how to make miniapp executables.
 #
