--- a/Makefile.in
+++ b/Makefile.in
@@ -254,6 +254,7 @@ supertags:
 	etags *.c *.h *.tex documentation/*.tex 
 	etags -a miniapps/*.c miniapps/*.man Makefile.in
 	etags -a ~/src/hmmer/src/*.c ~/src/hmmer/src/*.h 
+	etags -a ~/src/hmmer/src/impl_sse/*.c ~/src/hmmer/src/impl_sse/*.h 
 	etags -a ~/src/hmmer/Makefile.in ~/src/hmmer/src/Makefile.in 
 	etags -a ~/src/infernal/src/*.c ~/src/infernal/src/*.h 
 	etags -a ~/src/infernal/testsuite/*.c 
