Working on esl_hmm: eo[] added; Forward() is being used by HMMER null model.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@288 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -53,6 +53,7 @@ HEADERS = \
 	esl_gev.h\
 	esl_gumbel.h\
 	esl_histogram.h\
+	esl_hmm.h\
 	esl_hyperexp.h\
 	esl_keyhash.h\
 	esl_minimizer.h\
@@ -99,6 +100,7 @@ OBJS    = \
 	esl_gev.o\
 	esl_gumbel.o\
 	esl_histogram.o\
+	esl_hmm.o\
 	esl_hyperexp.o\
 	esl_keyhash.o\
 	esl_minimizer.o\
