In esl_tree, now distinguish between additive trees and linkage trees. In a linkage tree, the "branch lengths" are actually the height of the tree: the d_ij value at which a join of two nodes was made.
Added the esl-cluster miniapp for clustering tabular data, such as
all-vs-all BLAST's.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@303 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -29,6 +29,7 @@ ESLINCDIR = -I..
 PROGS = esl-afetch\
 	esl-alimanip\
 	esl-alistat\
+	esl-cluster\
 	esl-compstruct\
 	esl-histplot\
 	esl-reformat\
